[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/lives.png" type="Texture" id=1]
[ext_resource path="res://assets/images/numbers/hudnumber_0003.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/debughud.gd" type="Script" id=3]

[node name="hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="debughud" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 100.0
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="debughud"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 64.0
text = "score: 100"

[node name="RichTextLabel2" type="RichTextLabel" parent="debughud"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 48.0
text = "state: 100"

[node name="RichTextLabel3" type="RichTextLabel" parent="debughud"]
margin_top = -9.0
margin_right = 100.0
margin_bottom = 31.0
text = "delta: 100"

[node name="RichTextLabel4" type="RichTextLabel" parent="debughud"]
margin_top = -25.0
margin_right = 457.0
margin_bottom = 15.0
text = "delta: 100"

[node name="Control2" type="Control" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 75.0
margin_bottom = 186.0

[node name="TextureRect" type="TextureRect" parent="Control2"]
margin_left = -1.0
margin_top = -1.0
margin_right = 34.0
margin_bottom = 34.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control2"]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 32.0
texture = ExtResource( 2 )
